Final touchups to v1

--- a/index.html
+++ b/index.html
@@ -271,23 +271,24 @@
         <a
           href="https://www.google.com/maps/place/Black+Cat+Espresso+Bar/@43.6527091,-79.4345366,17z/data=!3m1!4b1!4m2!3m1!1s0x882b3450bfee7a4f:0x9238671ceddd7d7b"
         >
-          <i class="fa-solid fa-map-location-dot"></i>1104 College Street,
+          <i class="fa-solid fa-map-location-dot"></i> 1104 College Street,
           Toronto</a
         >
-
+        <br />
         <a href="https://www.instagram.com/blackcatespressobar"
-          ><i class="fa-brands fa-instagram"></i>@blackcatespressobar
+          ><i class="fa-brands fa-instagram"></i> @blackcatespressobar
         </a>
       </p>
+
       <p>
         <a
           href="https://www.google.com/maps/place/Black+Cat+Espresso+Bar/@43.7017065,-79.5169125,17z/data=!3m1!4b1!4m5!3m4!1s0x882b314e377e3761:0x56e9ae31fa0a7c06!8m2!3d43.7017026!4d-79.5147185"
-          >46 Rosemount Ave, York <i class="fa-solid fa-map-location-dot"></i
-        ></a>
-
+          ><i class="fa-solid fa-map-location-dot"></i> 46 Rosemount Ave, York
+        </a>
+        <br />
         <a href="https://www.instagram.com/blackcatespressobarweston"
-          >@blackcatespressobarweston <i class="fa-brands fa-instagram"></i
-        ></a>
+          ><i class="fa-brands fa-instagram"></i> @blackcatespressobarweston
+        </a>
       </p>
       <p>
         <a href="callto:+16473859929"
