adapt to other screen sizes.

--- a/index.html
+++ b/index.html
@@ -49,222 +49,224 @@
         >
       </p>
     </header>
-    <section id="our-story">
-      <h2>Our Story</h2>
-      <!-- TO DO: business to provide copy. -->
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit dolore
-        iure nemo. Accusamus quod, facere consequatur eos reiciendis cupiditate
-        sapiente beatae culpa inventore quia ratione veritatis quo quae tempore
-        exercitationem minima illo. Excepturi assumenda veniam eius aliquid, ex
-        magni similique, blanditiis consectetur repellendus numquam fugiat ea,
-        quam laudantium officia debitis.
-      </p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit dolore
-        iure nemo. Accusamus quod, facere consequatur eos reiciendis cupiditate
-        sapiente beatae culpa inventore quia ratione veritatis quo quae tempore
-        exercitationem minima illo. Excepturi assumenda veniam eius aliquid, ex
-        magni similique, blanditiis consectetur repellendus numquam fugiat ea,
-        quam laudantium officia debitis.
-      </p>
-    </section>
-    <section id="menu">
-      <h2>Menu</h2>
-      <!-- Debated a pdf download vs. actually listing this out, but the PDF download can be annoying for customers who just want to see. Also debated just linking to UberEats for the menu, which would minimize time spent updating the menu (on place), but the value of the website gets lost a bit if we don't feature teh menu here, I think. -->
-      <h3>Food</h3>
-      <img
-        src="images/food/bacon-sandwich.png"
-        alt="Photo of the breakfast sandwich."
-      />
-      <article class="menu-item">
-        <h4>Bacon Breakfast Sandwich</h4>
-        <span class="price">$7.99</span>
+    <main>
+      <section id="our-story">
+        <h2>Our Story</h2>
+        <!-- TO DO: business to provide copy. -->
         <p>
-          Over-toasted English muffin, bacon, egg, cheddar, mayo, and Dijon. No
-          modifications. The inside of the English muffin looks a dark color
-          from the toasting, they are not "burned". They look much lighter
-          before we add the sauce. The little bit of over toasting adds a nice
-          flavor and crunch.
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit dolore
+          iure nemo. Accusamus quod, facere consequatur eos reiciendis
+          cupiditate sapiente beatae culpa inventore quia ratione veritatis quo
+          quae tempore exercitationem minima illo. Excepturi assumenda veniam
+          eius aliquid, ex magni similique, blanditiis consectetur repellendus
+          numquam fugiat ea, quam laudantium officia debitis.
         </p>
-      </article>
-      <article class="menu-item">
-        <h4>Veggie Breakfast Sandwich</h4>
-        <span class="price">$7.99</span>
         <p>
-          Over-toasted English muffins, tomatoes, basil, egg, cheddar, mayo, and
-          Dijon. No modifications. The inside of the English muffin looks a dark
-          color from the toasting, they are not "burned". They look much much
-          lighter in color before we add the sauce. The little bit of over
-          toasting adds a nice flavor and crunch.
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit dolore
+          iure nemo. Accusamus quod, facere consequatur eos reiciendis
+          cupiditate sapiente beatae culpa inventore quia ratione veritatis quo
+          quae tempore exercitationem minima illo. Excepturi assumenda veniam
+          eius aliquid, ex magni similique, blanditiis consectetur repellendus
+          numquam fugiat ea, quam laudantium officia debitis.
         </p>
-      </article>
-      <h3>Drinks</h3>
-      <img src="images/food/lattes.png" alt="Photo of two lattes." />
-      <article class="menu-item">
-        <h4>Americano (12oz)</h4>
-        <span class="price">$3.75</span>
-        <p>Double shot of espresso with hot water in 12 oz cup.</p>
-      </article>
-      <article class="menu-item">
-        <h4>Quad Americano (16 oz)</h4>
-        <span class="price">$6.25</span>
-        <p>4 shots of espresso with hot water in 16 oz cup.</p>
-      </article>
-      <article class="menu-item">
-        <h4>Latte (12 oz)</h4>
-        <span class="price">$4.25</span>
-        <p>Double shot of espresso with milk in 12 oz cup.</p>
-      </article>
-      <article class="menu-item">
-        <h4>Quad Latte (16 oz)</h4>
-        <span class="price">$7.25</span>
-        <p>4 shots of espresso with milk in 16 oz cup.</p>
-      </article>
-      <article class="menu-item">
-        <h4>Matcha Latte</h4>
-        <span class="price">$4.50</span>
-      </article>
-      <article class="menu-item">
-        <h4>Tea</h4>
-        <span class="price">$3.50</span>
-        <p>Assorted tea selection.</p>
-      </article>
-      <article class="menu-item">
-        <h4>Coffee Beans (1lb bag)</h4>
-        <span class="price">$22.00</span>
-        <p>Whole bean, can be ground on request.</p>
-      </article>
-      <h3>Pastries</h3>
-      <img
-        src="images/food/pastries.png"
-        alt="Photo of a selection of pastries on a plate."
-      />
-      <article class="menu-item">
-        <h4>Butter Croissant</h4>
-        <span class="price">$3.50</span>
-      </article>
-      <article class="menu-item">
-        <h4>Almond Croissant</h4>
-        <span class="price">$4.00</span>
-      </article>
-      <article class="menu-item">
-        <h4>Chocolate Croissant</h4>
-        <span class="price">$4.00</span>
-      </article>
-      <article class="menu-item">
-        <h4>Chocolate Chip Cookie</h4>
-        <span class="price">$3.75</span>
-      </article>
-      <article class="menu-item">
-        <h4>Carrot Loaf</h4>
-        <span class="price">$3.75</span>
-        <p>Slice of carrot loaf with cream cheese icing.</p>
-      </article>
-      <article class="menu-item">
-        <h4>Chocolate Chip Banana Loaf</h4>
-        <span class="price">$3.75</span>
-      </article>
-      <article class="menu-item">
-        <h4>Pecan Butter Tart</h4>
-        <span class="price">$3.75</span>
-      </article>
-      <article class="menu-item">
-        <h4>Breakfast Cookie (Guilt Free)</h4>
-        <span class="price">$3.75</span>
-        <p>Seeds, nuts, and chocolate chunks. This is an amazing cookie.</p>
-      </article>
-      <article class="menu-item">
-        <h4>Chocolate Mini Egg Cookie</h4>
-        <span class="price">$3.75</span>
-      </article>
-      <article class="menu-item">
-        <h4>GFV Chocolate Energybar</h4>
-        <span class="price">$3.75</span>
-        <p>
-          Peanut butter, almond butter, chocolate, and a blend of oats, seeds,
-          and dried fruit. Gluten-free or vegan. Oats are gluten-free, but we
-          cannot guarantee that the oats were processed in a gluten-free
-          facility. If you are celiac do not order this.
-        </p>
-      </article>
-      <article class="menu-item">
-        <h4>Oatmeal Rasin Cookie</h4>
-        <span class="price">$3.75</span>
-      </article>
-      <article class="menu-item">
-        <h4>Ginger Molasses Cookie</h4>
-        <span class="price">$3.75</span>
-      </article>
-      <article class="menu-item">
-        <h4>Muffin - Banana Walnut</h4>
-        <span class="price">$3.75</span>
-        <p>Incredible muffin that also happens to be vegan.</p>
-      </article>
-    </section>
-    <section id="reviews">
-      <h2>Customer's Voice</h2>
-      <div class="testimonial-gallery">
-        <!-- In the real world this would be populated with a Google API request, but the dev needs access to the Google Business account that owns the business, so for now I've just lifted the content. -->
-        <article class="testimonial">
-          <h3 class="name">Dominique</h3>
-          <img
-            class="photo"
-            src="https://lh3.googleusercontent.com/a-/AOh14Ghjzo7LmTBa819O-1LKO7L3sRR-whiKOgl076K7fWY=s40-w40-h40-c0x00000000-cc-rp-ba4"
-          />
-          <div class="rating">
-            <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-          </div>
-          <p class="snippet">
-            <a
-              href="https://www.google.com/maps/reviews/data=!4m5!14m4!1m3!1m2!1s100501822144524066432!2s0x882b314e377e3761:0x56e9ae31fa0a7c06?sa=X&amp;ved=2ahUKEwiWyd_cppv3AhWYZs0KHTJvBoYQv_QBegQISxAR"
-              >"Really nice space and super friendly staff with great
-              conversation."</a
-            >
+      </section>
+      <section id="menu">
+        <h2>Menu</h2>
+        <!-- Debated a pdf download vs. actually listing this out, but the PDF download can be annoying for customers who just want to see. Also debated just linking to UberEats for the menu, which would minimize time spent updating the menu (on place), but the value of the website gets lost a bit if we don't feature teh menu here, I think. -->
+        <h3>Food</h3>
+        <img
+          src="images/food/bacon-sandwich.png"
+          alt="Photo of the breakfast sandwich."
+        />
+        <article class="menu-item">
+          <h4>Bacon Breakfast Sandwich</h4>
+          <span class="price">$7.99</span>
+          <p>
+            Over-toasted English muffin, bacon, egg, cheddar, mayo, and Dijon.
+            No modifications. The inside of the English muffin looks a dark
+            color from the toasting, they are not "burned". They look much
+            lighter before we add the sauce. The little bit of over toasting
+            adds a nice flavor and crunch.
           </p>
         </article>
-        <article class="testimonial">
-          <h3 class="name">Anne Marie</h3>
-          <img
-            class="photo"
-            src="https://lh3.googleusercontent.com/a-/AOh14GifzI0yJsVCSRKAN0ZV_XD08IJFpDoxUCm096DqIg=s40-w40-h40-c0x00000000-cc-rp-ba5"
-          />
-          <div class="rating">
-            <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-          </div>
-          <p class="snippet">
-            <a
-              href="https://www.google.com/maps/reviews/data=!4m5!14m4!1m3!1m2!1s112048200492669189172!2s0x882b314e377e3761:0x56e9ae31fa0a7c06?sa=X&amp;ved=2ahUKEwiWyd_cppv3AhWYZs0KHTJvBoYQv_QBegQISxAV"
-              >"Same great selection of pastries and now bread and bagels
-              too."</a
-            >
+        <article class="menu-item">
+          <h4>Veggie Breakfast Sandwich</h4>
+          <span class="price">$7.99</span>
+          <p>
+            Over-toasted English muffins, tomatoes, basil, egg, cheddar, mayo,
+            and Dijon. No modifications. The inside of the English muffin looks
+            a dark color from the toasting, they are not "burned". They look
+            much much lighter in color before we add the sauce. The little bit
+            of over toasting adds a nice flavor and crunch.
           </p>
         </article>
-        <article class="testimonial">
-          <h3 class="name">Maria</h3>
-          <img
-            class="photo"
-            src="https://lh3.googleusercontent.com/a-/AOh14GgA1xsf82ENJ0W0FQG0flajFwWccB6am2Z5WGVWgSA=s40-w40-h40-c0x00000000-cc-rp-ba2"
-          />
-          <div class="rating">
-            <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-          </div>
-          <p class="snippet">
-            <a
-              href="https://www.google.com/maps/reviews/data=!4m5!14m4!1m3!1m2!1s105929768156206337161!2s0x882b314e377e3761:0x56e9ae31fa0a7c06?sa=X&amp;ved=2ahUKEwiWyd_cppv3AhWYZs0KHTJvBoYQv_QBegQISxAZ"
-              >"Best place in the area!!! and best almond croissants in Toronto"
-            </a>
+        <h3>Drinks</h3>
+        <img src="images/food/lattes.png" alt="Photo of two lattes." />
+        <article class="menu-item">
+          <h4>Americano (12oz)</h4>
+          <span class="price">$3.75</span>
+          <p>Double shot of espresso with hot water in 12 oz cup.</p>
+        </article>
+        <article class="menu-item">
+          <h4>Quad Americano (16 oz)</h4>
+          <span class="price">$6.25</span>
+          <p>4 shots of espresso with hot water in 16 oz cup.</p>
+        </article>
+        <article class="menu-item">
+          <h4>Latte (12 oz)</h4>
+          <span class="price">$4.25</span>
+          <p>Double shot of espresso with milk in 12 oz cup.</p>
+        </article>
+        <article class="menu-item">
+          <h4>Quad Latte (16 oz)</h4>
+          <span class="price">$7.25</span>
+          <p>4 shots of espresso with milk in 16 oz cup.</p>
+        </article>
+        <article class="menu-item">
+          <h4>Matcha Latte</h4>
+          <span class="price">$4.50</span>
+        </article>
+        <article class="menu-item">
+          <h4>Tea</h4>
+          <span class="price">$3.50</span>
+          <p>Assorted tea selection.</p>
+        </article>
+        <article class="menu-item">
+          <h4>Coffee Beans (1lb bag)</h4>
+          <span class="price">$22.00</span>
+          <p>Whole bean, can be ground on request.</p>
+        </article>
+        <h3>Pastries</h3>
+        <img
+          src="images/food/pastries.png"
+          alt="Photo of a selection of pastries on a plate."
+        />
+        <article class="menu-item">
+          <h4>Butter Croissant</h4>
+          <span class="price">$3.50</span>
+        </article>
+        <article class="menu-item">
+          <h4>Almond Croissant</h4>
+          <span class="price">$4.00</span>
+        </article>
+        <article class="menu-item">
+          <h4>Chocolate Croissant</h4>
+          <span class="price">$4.00</span>
+        </article>
+        <article class="menu-item">
+          <h4>Chocolate Chip Cookie</h4>
+          <span class="price">$3.75</span>
+        </article>
+        <article class="menu-item">
+          <h4>Carrot Loaf</h4>
+          <span class="price">$3.75</span>
+          <p>Slice of carrot loaf with cream cheese icing.</p>
+        </article>
+        <article class="menu-item">
+          <h4>Chocolate Chip Banana Loaf</h4>
+          <span class="price">$3.75</span>
+        </article>
+        <article class="menu-item">
+          <h4>Pecan Butter Tart</h4>
+          <span class="price">$3.75</span>
+        </article>
+        <article class="menu-item">
+          <h4>Breakfast Cookie (Guilt Free)</h4>
+          <span class="price">$3.75</span>
+          <p>Seeds, nuts, and chocolate chunks. This is an amazing cookie.</p>
+        </article>
+        <article class="menu-item">
+          <h4>Chocolate Mini Egg Cookie</h4>
+          <span class="price">$3.75</span>
+        </article>
+        <article class="menu-item">
+          <h4>GFV Chocolate Energybar</h4>
+          <span class="price">$3.75</span>
+          <p>
+            Peanut butter, almond butter, chocolate, and a blend of oats, seeds,
+            and dried fruit. Gluten-free or vegan. Oats are gluten-free, but we
+            cannot guarantee that the oats were processed in a gluten-free
+            facility. If you are celiac do not order this.
           </p>
         </article>
-      </div>
-    </section>
-
+        <article class="menu-item">
+          <h4>Oatmeal Rasin Cookie</h4>
+          <span class="price">$3.75</span>
+        </article>
+        <article class="menu-item">
+          <h4>Ginger Molasses Cookie</h4>
+          <span class="price">$3.75</span>
+        </article>
+        <article class="menu-item">
+          <h4>Muffin - Banana Walnut</h4>
+          <span class="price">$3.75</span>
+          <p>Incredible muffin that also happens to be vegan.</p>
+        </article>
+      </section>
+      <section id="reviews">
+        <h2>Customer's Voice</h2>
+        <div class="testimonial-gallery">
+          <!-- In the real world this would be populated with a Google API request, but the dev needs access to the Google Business account that owns the business, so for now I've just lifted the content. -->
+          <article class="testimonial">
+            <h3 class="name">Dominique</h3>
+            <img
+              class="photo"
+              src="https://lh3.googleusercontent.com/a-/AOh14Ghjzo7LmTBa819O-1LKO7L3sRR-whiKOgl076K7fWY=s40-w40-h40-c0x00000000-cc-rp-ba4"
+            />
+            <div class="rating">
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <p class="snippet">
+              <a
+                href="https://www.google.com/maps/reviews/data=!4m5!14m4!1m3!1m2!1s100501822144524066432!2s0x882b314e377e3761:0x56e9ae31fa0a7c06?sa=X&amp;ved=2ahUKEwiWyd_cppv3AhWYZs0KHTJvBoYQv_QBegQISxAR"
+                >"Really nice space and super friendly staff with great
+                conversation."</a
+              >
+            </p>
+          </article>
+          <article class="testimonial">
+            <h3 class="name">Anne Marie</h3>
+            <img
+              class="photo"
+              src="https://lh3.googleusercontent.com/a-/AOh14GifzI0yJsVCSRKAN0ZV_XD08IJFpDoxUCm096DqIg=s40-w40-h40-c0x00000000-cc-rp-ba5"
+            />
+            <div class="rating">
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <p class="snippet">
+              <a
+                href="https://www.google.com/maps/reviews/data=!4m5!14m4!1m3!1m2!1s112048200492669189172!2s0x882b314e377e3761:0x56e9ae31fa0a7c06?sa=X&amp;ved=2ahUKEwiWyd_cppv3AhWYZs0KHTJvBoYQv_QBegQISxAV"
+                >"Same great selection of pastries and now bread and bagels
+                too."</a
+              >
+            </p>
+          </article>
+          <article class="testimonial">
+            <h3 class="name">Maria</h3>
+            <img
+              class="photo"
+              src="https://lh3.googleusercontent.com/a-/AOh14GgA1xsf82ENJ0W0FQG0flajFwWccB6am2Z5WGVWgSA=s40-w40-h40-c0x00000000-cc-rp-ba2"
+            />
+            <div class="rating">
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <p class="snippet">
+              <a
+                href="https://www.google.com/maps/reviews/data=!4m5!14m4!1m3!1m2!1s105929768156206337161!2s0x882b314e377e3761:0x56e9ae31fa0a7c06?sa=X&amp;ved=2ahUKEwiWyd_cppv3AhWYZs0KHTJvBoYQv_QBegQISxAZ"
+                >"Best place in the area!!! and best almond croissants in
+                Toronto"
+              </a>
+            </p>
+          </article>
+        </div>
+      </section>
+    </main>
     <footer>
       <h2>Find Us</h2>
       <p>
